--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-player": "^2.13.0",
     "react-syntax-highlighter": "^5.8.0",
     "stripe": "^14.25.0",
-    "yet-another-react-lightbox": "^3.12.0"
+    "yet-another-react-lightbox": "^3.12.0",
+    "nodemailer": "^6.9.7",
+    "@types/nodemailer": "^6.4.14"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
